Cambios ayer carlos

--- a/prueba.html
+++ b/prueba.html
@@ -14,8 +14,17 @@
       <tr><th>ID</th><th>Nombre</th></tr>
     </thead>
     <tbody>
-      <tr><td>1</td><td>Foto A</td></tr>
-      <tr><td>2</td><td>Foto B</td></tr>
+      <tr>
+        <form action="hola.html" method="get">
+        <td name="1"><button name="1" value="1s">1</button></td>
+        <td name="Foto A"><button>Foto A</button></td>
+        </form>
+        <a href=""></a>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Foto B</td>
+      </tr>
     </tbody>
   </table>
 </body>
